ex1.10/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
      containers:
        - name: logoutput-write
          image: usb9/ex1.10-logoutput-write:ver1
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
        - name: logoutput-read
          image: usb9/ex1.10-logoutput-read:ver1
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
